WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78569
[Regression]
r107650
broke the windows build.
https://bugs.webkit.org/show_bug.cgi?id=78569
Summary
[Regression] r107650 broke the windows build.
Shinya Kawanaka
Reported
2012-02-13 19:56:36 PST
>------ Build started: Project: webcore_dom, Configuration: Debug Win32 ------
1>Compiling... 1>Element.cpp 1>..\dom\Element.cpp(2004) : error C2360: initialization of 'fitState' is skipped by 'case' label 1> ..\dom\Element.cpp(2002) : see declaration of 'fitState' 1>..\dom\Element.cpp(2007) : error C2360: initialization of 'emptyState' is skipped by 'case' label 1> ..\dom\Element.cpp(2005) : see declaration of 'emptyState' 1>..\dom\Element.cpp(2007) : error C2360: initialization of 'fitState' is skipped by 'case' label 1> ..\dom\Element.cpp(2002) : see declaration of 'fitState' 1>..\dom\Element.cpp(2010) : error C2361: initialization of 'overflowState' is skipped by 'default' label 1> ..\dom\Element.cpp(2008) : see declaration of 'overflowState' 1>..\dom\Element.cpp(2010) : error C2361: initialization of 'emptyState' is skipped by 'default' label 1> ..\dom\Element.cpp(2005) : see declaration of 'emptyState' 1>..\dom\Element.cpp(2010) : error C2361: initialization of 'fitState' is skipped by 'default' label 1> ..\dom\Element.cpp(2002) : see declaration of 'fitState'
Attachments
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-02-13 20:20:01 PST
Committed
r107663
: <
http://trac.webkit.org/changeset/107663
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug