[Regression] r107650 broke the windows build. https://bugs.webkit.org/show_bug.cgi?id=78569

Build fix, Unreviewed.

The variable defined in switch statement should not escape from the switch statement.

* dom/Element.cpp:
(WebCore::Element::webkitRegionOverflow):

Canonical link: https://commits.webkit.org/95510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107663 268f45cc-cd09-0410-ab3c-d52691b4dbfc